--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"]
+            "styles": ["src/styles/main.css"]
           },
           "configurations": {
             "production": {
@@ -80,7 +80,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"]
+            "styles": ["src/styles/main.css"]
           }
         },
         "lint": {
